Additional code improvements