@@ -4,6 +4,7 @@ import static org.testng.Assert.assertEquals;
 
 import fi.muni.cz.dataprovider.exception.DataProviderException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import org.testng.annotations.Test;
 
@@ -17,7 +18,7 @@ public class GitHubUrlParserNGTest {
     ParsedUrlData parsedData = parser.parseUrlAndCheck("https://github.com/user/repository");
     assertEquals("repository", parsedData.getRepositoryName());
     assertEquals("user", parsedData.getUserName());
-    assertEquals(new URL("https://github.com/user/repository"), parsedData.getUrl());
+    assertEquals(URI.create("https://github.com/user/repository").toURL(), parsedData.getUrl());
   }
 
   @Test(expectedExceptions = DataProviderException.class)
